--- a/app/Resources/views/board.twig
+++ b/app/Resources/views/board.twig
@@ -130,8 +130,8 @@
             {% endif %}
         </div>
     </div>
-    <script>
+    <div id="card-modal" class="card-modal-overlay" style="display: none"></div>
+    {#    {% include "board/modal-card.twig" %} #}
 
-    </script>
-    {% include "board/modal-card.twig" %}
 {% endblock %}
+
