--- a/app/Resources/views/board/modal-card.twig
+++ b/app/Resources/views/board/modal-card.twig
@@ -59,13 +59,12 @@
           <!-- Modo Edição -->
           <div id="card-edit-mode" style="display: none">
             <input type="text" id="card-edit-title" class="card-edit-title-input"
-                   placeholder="Título do card..." value="blau!!"/>
+                   placeholder="Título do card..." value="{{ titulo }}"/>
             <div class="border-bottom my-3" style="border-color: var(--border-solid) !important"></div>
             <label class="form-label fw-medium"
                    style="font-size: 0.875rem; color: var(--text-secondary)">Descrição</label>
-            <textarea id="card-edit-description" rows="10" class="card-edit-description-textarea">
-							{{ descricao }}
-						</textarea>
+            <textarea id="card-edit-description" rows="30"
+                      class="card-edit-description-textarea">{{ descricao }}</textarea>
             <div class="d-flex gap-2 mt-3">
               <button onclick="handleCardUpdate()" class="ui primary basic button">
                 Atualizar
@@ -80,14 +79,14 @@
         <div class="six wide column">
           <div class="card-field-group">
             <label class="card-field-label">Turma</label>
-            <select id="card-field-turma" class="card-field-select ui dropdown search drop-turmas">
+            <select id="card-field-turma" class="card-field-select ui dropdown search drop-turmas" disabled>
               <option value="">Selecione...</option>
             </select>
           </div>
 
           <div class="card-field-group">
             <label class="card-field-label">Curso</label>
-            <select id="card-field-curso" class="card-field-select ui dropdown search drop-cursos">
+            <select id="card-field-curso" class="card-field-select ui dropdown search drop-cursos" disabled>
               <option value="">Selecione...</option>
             </select>
           </div>
@@ -95,25 +94,27 @@
           <div class="card-field-group">
             <label class="card-field-label">UC</label>
             <select id="card-field-uc" class="card-field-select search ui dropdown search drop-ucs"
-                    onchange="handleUcChange()">
+                    onchange="handleUcChange()" disabled>
               <option value="">Selecione a UC...</option>
             </select>
           </div>
 
           <div class="card-field-group">
             <label class="card-field-label">Aula Inicial</label>
-            <input type="date" id="card-field-aula-inicial " class="card-field-input mini ui form"/>
+            <input type="date" value="{{ aula_inicial|date('Y-m-d') }}" id="card-field-aula-inicial "
+                   class="card-field-input mini ui form" disabled/>
           </div>
 
           <div class="card-field-group">
             <label class="card-field-label">Aula Final</label>
-            <input type="date" id="card-field-aula-final" class="card-field-input ui mini form"/>
+            <input type="date" value="{{ aula_final|date('Y-m-d') }}" id="card-field-aula-final" class="card-field-input ui mini form"
+                   disabled/>
           </div>
 
           <div class="card-field-group">
             <label class="card-field-label">Indicadores</label>
             <select name="" multiple="" class="ui fluid search dropdown indicadores card-field-select"
-                    id="card-field-indicadores-container">
+                    id="card-field-indicadores-container" disabled>
               <option value="">Selecione UC..</option>
             </select>
           </div>
@@ -122,7 +123,7 @@
             <label class="card-field-label">Conhecimentos</label>
             <select name="skills" multiple=""
                     class="ui fluid search dropdown conhecimentos card-field-select"
-                    id="card-field-conhecimentos-container">
+                    id="card-field-conhecimentos-container" disabled>
               <option value="">Selecione UC..</option>
             </select>
           </div>
@@ -130,7 +131,7 @@
           <div class="card-field-group">
             <label class="card-field-label">Habilidades</label>
             <select name="skills" multiple="" class="ui fluid search dropdown habilidades card-field-select"
-                    id="card-field-habilidades-container">
+                    id="card-field-habilidades-container" disabled>
               <option value="">Selecione UC..</option>
             </select>
           </div>
@@ -139,7 +140,7 @@
             <label class="card-field-label">Atitudes</label>
 
             <select name="skills" multiple="" class="ui fluid search dropdown atitudes card-field-select"
-                    id="card-field-atitudes-container">
+                    id="card-field-atitudes-container" disabled>
               <option value="">Selecione UC..</option>
             </select>
           </div>
