--- a/app/Resources/views/layout/header.twig
+++ b/app/Resources/views/layout/header.twig
@@ -1,14 +1,13 @@
-<div class="w-full p-3 border-bottom d-flex flex-row justify-content-between align-items-center"
-     style="background-color: var(--bg-secondary); border-bottom-color: var(--border-color); max-height: 3rem">
-  <div class="left d-flex align-items-center gap-2">
-    <img src="{{ './assets/img/icon-dark.png' }}" width="20" alt="DevBox Logo">
-    <h3 class="mb-0" style="color: var(--text-primary);">
-      Dev Box
-    </h3>
+<div class="w-full p-3 border-bottom d-flex flex-row justify-content-between align-items-center" style="background-color: var(--bg-secondary); border-bottom-color: var(--border-color); max-height: 3rem">
+	<div class="left d-flex align-items-center gap-2">
+		<img src="{{ './assets/img/icon-dark.png' }}" width="20" alt="DevBox Logo">
+		<h3 class="mb-0" style="color: var(--text-primary);">
+			Dev Box
+		</h3>
 
-  </div>
-  <div class="right d-flex align-items-center gap-3" style="color: var(--text-secondary);">
-    <span>dev</span>
-    <img class="rounded-circle" src="https://placehold.co/20x20/png" alt="Avatar" width="20" height="20">
-  </div>
+	</div>
+	<div class="right d-flex align-items-center gap-3" style="color: var(--text-secondary);">
+		<span>dev</span>
+		<img class="rounded-circle" src="https://placehold.co/20x20/png" alt="Avatar" width="20" height="20">
+	</div>
 </div>
